style.css
/* ... */
figure { 
    display: inline-block;
}
figure figcaption {
    text-align: center;
    font-size: 14px;
}
figure img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#bounce {
	background: url(img/porfolio/ballBounceGif.gif) no-repeat 5px 3px;
}

.bg-black {
	background-color: #222;
}


.left-align{
	text-align: left;
	font-size: 16px;
}

.portfolio-list{
	font-size: 14px;
	line-height: 1.6;
}

.text-muted {
    color: #777;
}


.text-intro {
	color: white;
	text-align:center;
}

.text-primary {
    color: #b8cef5;
}

p {
    font-size: 14px;
    line-height: 1.75;
}

p.large {
    font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
}

a {
    color: #b8cef5;
}

a:hover,
a:focus,
a:active,
a.active {
    color: #a2c0dc;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.img-centered {
    margin: 0 auto;
}

.bg-light-gray {
    background-color: #f7f7f7;
}

.bg-darkest-gray {
    background-color: #222;
}

.btn-primary {
    border-color: #b8cef5;
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #fff;
    background-color: #b8cef5;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    border-color: #b8cef5;
    color: #fff;
    background-color: #a2c0dc;
}

.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
    background-image: none;
}

.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
    border-color: #b8cef5;
    background-color: #b8cef5;
}

.btn-primary .badge {
    color: #b8cef5;
    background-color: #fff;
}

.btn-xl {
    padding: 20px 40px;
    border-color: #b8cef5;
    border-radius: 3px;
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 18px;
    font-weight: 700;
    color: #fff;
    background-color: #b8cef5;
}

.btn-xl:hover,
.btn-xl:focus,
.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    border-color: #b8cef5;
    color: #fff;
    background-color: #a2c0dc;
}

.btn-xl:active,
.btn-xl.active,
.open .dropdown-toggle.btn-xl {
    background-image: none;
}

.btn-xl.disabled,
.btn-xl[disabled],
fieldset[disabled] .btn-xl,
.btn-xl.disabled:hover,
.btn-xl[disabled]:hover,
fieldset[disabled] .btn-xl:hover,
.btn-xl.disabled:focus,
.btn-xl[disabled]:focus,
fieldset[disabled] .btn-xl:focus,
.btn-xl.disabled:active,
.btn-xl[disabled]:active,
fieldset[disabled] .btn-xl:active,
.btn-xl.disabled.active,
.btn-xl[disabled].active,
fieldset[disabled] .btn-xl.active {
    border-color: #b8cef5;
    background-color: #b8cef5;
}

.btn-xl .badge {
    color: #b8cef5;
    background-color: #fff;
}

.navbar-default {
    border-color: transparent;
    background-color: #222;
}

@font-face {
  src: url("css/reactor7/Reactor7.woff");
  font-family: 'Reactor7';
}

.navbar-default .navbar-brand {
    font-family: "Reactor7","Helvetica Neue",Helvetica,Arial;
    color: #b8cef5;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
    color: #a2c0dc;
}

.navbar-default .navbar-collapse {
    border-color: rgba(255,255,255,.02);
}

.navbar-default .navbar-toggle {
    border-color: #b8cef5;
    background-color: #b8cef5;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #b8cef5;
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: Montserrat, "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
    -webkit-transition: all ease .35s;
    -moz-transition: all ease .35s;
    transition: all ease .35s;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #b8cef5;
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #b8cef5;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #a2c0dc;
}

@media(min-width:768px) {
    .navbar-default {
        padding: 25px 0;
        border: 0;
        background-color: transparent;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

header {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    /*background-image: url('/img/header-bg.jpg');*/
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
}
/* ... */

